showJoinRequests + docs + Custom 404 pour les api
